--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -10,6 +10,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>React App</title>
+    <script>
+        window.REACT_APP_REGION = "$REGION";
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
