--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -11,7 +11,7 @@
 
     <title>React App</title>
     <script>
-        window.REACT_APP_REGION = "$REGION";
+        window.REACT_APP_REGION = "REPLACE_REACT_APP_REGION";
     </script>
   </head>
   <body>
